Stop close button overlap on agent bio modal.

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -81,7 +81,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 10;
+    z-index: 102;
     background: rgba(255, 255, 255, 0.8);
     .content {
       position: relative;
@@ -350,7 +350,7 @@
     .bio-pic-mobile {
       display: block;
       width: 88%;
-      margin: 40px auto 0 auto;
+      margin: 52px auto 0 auto;
     }
 
     .bio-pic {
